--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
-  </head>
 
-  <body>
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
     <main class="product-listing-wrapper">
     </main>
-
     <script src="api/products.js"></script>
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
