realized main logic

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,22 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
 
   <body>
     <main class="product-listing-wrapper">
+      <div class="flex-container">
+      	<div class="thing-list">
+      	</div>
+      	<div class="modal-order no-active">
+        </div>
+        <div class="modal-basket no-active">
+        </div>
+      </div>
     </main>
-
     <script src="api/products.js"></script>
+    <script src="./renderList.js"></script>
+    <script src="./logic.js"></script>
   </body>
 </html>
