Complete test task

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,21 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
 
   <body>
+    <div class="pop-up" id="pop-up"></div>
+
     <main class="product-listing-wrapper">
+      <div class="product-listing-wrapper__products-list" id="product-list"></div>
     </main>
 
     <script src="api/products.js"></script>
+    <script src="scripts/constants.js"></script>
+    <script src="./scripts/script.js"></script>
+    <script src="./scripts/productsShow.js"></script>
+    <script src="./scripts/order.js"></script>
+    <script src="./scripts/toCartPopup.js"></script>
   </body>
 </html>
