--- a/src/index.html
+++ b/src/index.html
@@ -121,6 +121,7 @@
 
       <div class="order-popup">
         <h3 class="order-popup__name">Диван</h3>
+        <span class="order-popup__close"></span>
         <div class="order-popup__wrapper">
           <div class="order-popup__info-wrapper">
             <img src="./assets/images/1.jpg" alt="Диван" width="150px" height="90px">
@@ -146,27 +147,23 @@
         <p>Вы добавили в корзину:</p>
       </div>
       <div class="cart-popup__product">
+        <span class="cart-popup__close"></span>
         <img src="./assets/images/1.jpg" alt="Диван" width="150px" height="90px">
         <div class="cart-popup__info">
           <h3 class="cart-popup__name">Диван</h3>
           <p class="cart-popup__price">17700 руб.</p>
         </div>
       </div>
+      </div>
+
       <div class="cart-popup__product">
+        <span class="cart-popup__close"></span>
         <img src="./assets/images/1.jpg" alt="Диван" width="150px" height="90px">
         <div class="cart-popup__info">
           <h3 class="cart-popup__name">Диван</h3>
           <p class="cart-popup__price">17700 руб.</p>
         </div>
       </div>
-      <div class="cart-popup__product">
-        <img src="./assets/images/1.jpg" alt="Диван" width="150px" height="90px">
-        <div class="cart-popup__info">
-          <h3 class="cart-popup__name">Диван</h3>
-          <p class="cart-popup__price">17700 руб.</p>
-        </div>
-      </div>
-      <button class="btn btn_pink cart-popup__in-cart">Перейти в корзину</button>
     </div>
 
     <script src="api/products.js"></script>
