--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,14 @@
   <body>
     <main class="product-listing-wrapper">
       <h1>Каталог мебели</h1>
+    </main>
 
-      <div class="order-popup">
-        <h3 class="order-popup__name">Диван</h3>
-        <span class="order-popup__close"></span>
+    <div class="order-popup">
+      <div class="order-popup__container">
+        <h3 class="order-popup__name"></h3>
+        <span class="order-popup__close" tabindex="0"></span>
         <div class="order-popup__wrapper">
-          <div class="order-popup__info-wrapper">
-            <img src="./assets/images/1.jpg" alt="Диван" width="150px" height="90px">
-            <p class="order-popup__price"><b>17700 руб.</b></p>
-          </div>
-          <fieldset class="order-popup__form-wrapper">
+          <form class="order-popup__form">
             <div class="order-popup__comments">
               <label for="order-comment">Комментарий к заказу:</label>
               <textarea name="order-comment" id="order-comment" cols="50" rows="7"></textarea>
@@ -28,24 +26,18 @@
               <label for="order-tel">Номер телефона*:</label>
               <input type="tel" name="order-tel" id="order-tel" required>
             </div>
-          </fieldset>
+          </form>
         </div>
         <button type="submit" class="btn btn_pink order-popup__button">Отправить</button>
       </div>
-    </main>
+    </div>
 
+    
     <div class="cart-popup">
       <div class="cart-popup__title">
         <p>Вы добавили в корзину:</p>
       </div>
-      <div class="cart-popup__product">
-        <span class="cart-popup__close"></span>
-        <img src="./assets/images/1.jpg" alt="Диван" width="150px" height="90px">
-        <div class="cart-popup__info">
-          <h3 class="cart-popup__name">Диван</h3>
-          <p class="cart-popup__price">17700 руб.</p>
-        </div>
-      </div>
+      <div class="cart-popup__list"></div>
     </div>
 
     <script src="api/products.js"></script>
