--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="UTF-8">
-  </head>
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>AbakPress Test</title>
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
+</head>
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
+<body>
+    <div class="root">
+        <header class="header">
+            <h1>Test Task</h1>
+            <img class="header__cart" src="./assets/images/cart.svg" alt="Cart">
+        </header>
 
-    <script src="api/products.js"></script>
-  </body>
+        <section class="products">
+            <h1 class="products__heading">Каталог</h1>
+            <ul class="products__list">
+            </ul>
+        </section>
+
+
+        <div class="popup order-popup">
+            <div class="order-popup__container">
+                <h3 class="popup__heading order-popup__heading"></h3>
+                <img src="./assets/images/close.svg" class="popup__close" alt="Закрыть окно" />
+                <figure class="order-popup__info">
+                    <img class="popup__image order-popup__image" src="" alt="Изображение товара" />
+                    <figcaption class="popup__price order-popup__price"></figcaption>
+                </figure>
+
+                <div class="order-popup__form-container">
+                    <form class="order-popup__form" name="order">
+                        <div class="order-popup__comment">
+                            <label for="order-comment">Комментарий к заказу:</label>
+                            <textarea class="order-popup__input order-popup__input_type_comment" id="order-comment"
+                                name="order-comment" cols="55">
+                            </textarea>
+                        </div>
+                </div>
+                <label class="order-popup__phone-label" for="order-phone">Номер телефона*:</label>
+                <div class="order-popup__form-container">
+                    <div class="order-popup__phone">
+                        <input class="order-popup__input order-popup__input_type_tel" type="tel" name="order-phone"
+                            id="order-phone" required />
+                        <button type="submit" class="btn btn_orderBtn">Отправить</button>
+                    </div>
+                </div>
+                </form>
+            </div>
+        </div>
+
+
+        <div class="popup add-to-cart-popup">
+            <h2 class="add-to-cart-popup__heading">Вы добавили в корзину:</h2>
+            <div class="add-to-cart-popup__container">
+            </div>
+            <button class="btn add-to-cart-popup__btn">Перейти в корзину</button>
+        </div>
+    </div>
+    <script src='./index.js' type="module"></script>
+</body>
+
 </html>
