update styles.css, html markup

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="root">
         <header class="header">
-            <h1>Test Task</h1>
-            <img class="header__cart" src="./assets/images/cart.svg" alt="Cart">
+            <h1 class="header__title">Test Task</h1>
+            <img class="header__cart" src="./assets/images/cart.svg" alt="Корзина" title="Нажми, чтобы появился попап">
         </header>
 
         <section class="products">
@@ -23,7 +23,6 @@
             <ul class="products__list">
             </ul>
         </section>
-
 
         <div class="popup order-popup">
             <div class="order-popup__container">
@@ -33,7 +32,6 @@
                     <img class="popup__image order-popup__image" src="" alt="Изображение товара" />
                     <figcaption class="popup__price order-popup__price"></figcaption>
                 </figure>
-
                 <div class="order-popup__form-container">
                     <form class="order-popup__form" name="order">
                         <div class="order-popup__comment">
@@ -59,6 +57,7 @@
         <div class="popup add-to-cart-popup">
             <h2 class="add-to-cart-popup__heading">Вы добавили в корзину:</h2>
             <div class="add-to-cart-popup__container">
+
             </div>
             <button class="btn add-to-cart-popup__btn">Перейти в корзину</button>
         </div>
