--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-  </head>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="css/nullstyle.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <title>Store</title>
+    </head>
+    <body>
+        <main class="product-listing-wrapper">
+            <div class="product-listing"></div>
+        </main>
+        <div class="cart-icon zero">
+            <img src="assets/images/icons/cart.png" alt="cart" />
+        </div>
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
-
-    <script src="api/products.js"></script>
-  </body>
+        <script src="api//products.js"></script>
+        <script src="script.js"></script>
+    </body>
 </html>
