--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,68 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <title>Магазин люксовых диванов</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <main class="product-listing-wrapper">
+
+    	<section>
+    		<h1 class="visually-hidden">Каталог товаров</h1>
+    		<div class="wrapper" id="goods"></div>
+    	</section>
+    	
     </main>
 
+    <section class="section-basket">
+    	<div class="section-basket__wrapper">
+    		<div class="section-basket__note">
+    			<p class="section-basket__text">Вы добавили в корзину:</p>
+    		</div>
+    		<div class="section-basket__wrapper-content" id="shopping"></div>
+    		<div>
+    			<button class="button-delete" type="button" aria-label="Удалить из корзины">
+    				<svg width="18" height="18" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M13.3299 10.5005L20.7072 3.12321C21.0963 2.7317 21.0963 2.09952 20.7072 1.70801L19.292 0.291799C18.9005 -0.0972665 18.2683 -0.0972665 17.8768 0.291799L10.4995 7.67009L3.12221 0.2928C2.7307 -0.0962657 2.09852 -0.0962657 1.70701 0.2928L0.291799 1.70801C-0.0972665 2.09952 -0.0972665 2.7317 0.291799 3.12321L7.66909 10.5005L0.291799 17.8778C-0.0972665 18.2693 -0.0972665 18.9015 0.291799 19.293L1.70801 20.7082C2.09952 21.0973 2.7317 21.0973 3.12321 20.7082L10.5005 13.3309L17.8778 20.7082C18.2693 21.0973 18.9015 21.0973 19.293 20.7082L20.7082 19.293C21.0973 18.9015 21.0973 18.2693 20.7082 17.8778L13.3299 10.5005Z" fill="#FB565A"/>
+					</svg>
+    			</button>
+    		</div>
+    		<button class="button-basket">Перейти в корзину</button>
+    	</div>
+    </section>
+
+    <section class="order-form">
+    	<form class="order-form__form" action="#" method="post">
+    		<button class="button-clouse" type="button" align-items="Закрыть">
+    			<svg width="16" height="16" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M13.3299 10.5005L20.7072 3.12321C21.0963 2.7317 21.0963 2.09952 20.7072 1.70801L19.292 0.291799C18.9005 -0.0972665 18.2683 -0.0972665 17.8768 0.291799L10.4995 7.67009L3.12221 0.2928C2.7307 -0.0962657 2.09852 -0.0962657 1.70701 0.2928L0.291799 1.70801C-0.0972665 2.09952 -0.0972665 2.7317 0.291799 3.12321L7.66909 10.5005L0.291799 17.8778C-0.0972665 18.2693 -0.0972665 18.9015 0.291799 19.293L1.70801 20.7082C2.09952 21.0973 2.7317 21.0973 3.12321 20.7082L10.5005 13.3309L17.8778 20.7082C18.2693 21.0973 18.9015 21.0973 19.293 20.7082L20.7082 19.293C21.0973 18.9015 21.0973 18.2693 20.7082 17.8778L13.3299 10.5005Z" fill="#a5a7a5"/>
+				</svg>
+    		</button>
+				<div class="order-form__content">
+				<!--Здесь будет информация о товаре -->
+				</div>
+                <div class="order-form__position">
+				    <div class="order-form__comment">
+					   <label for="text">Комментарий <br> к заказу:</label>
+					   <textarea class="textarea" rows="5" cols="40" id="text" name="text"></textarea>
+				    </div>
+				    <div class="order-form__data">
+					   <label class="order-form__label" for="tel"> Ваш телефон* :
+						  <input class="order-form__input" type="tel" name="tel" id="tel" required>
+					   </label>
+					   <button class="button-form" type="submit">Отправить</button>
+				    </div>
+                </div>
+    	</form>
+    </section>
+
     <script src="api/products.js"></script>
+   
+    <script src="components/Goods/goods.js"></script>
+    <link rel="stylesheet" href="components/Goods/goods.css">
+
+    <script src="js/main.js"></script>
+
   </body>
 </html>
