--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
 		<meta charset="UTF-8" />
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="https://www.pulscen.ru/system/ckeditor_assets/attachments/226405/popap.css" />
-		<link rel="stylesheet" href="src/assets/index.css" />
+		<link rel="stylesheet" href="src/assets/css/index.css" />
 	</head>
 
 	<body>
 		<main class="product-listing-wrapper"> </main>
 
-		<div id="products"></div>
+		<div class="products" id="products"></div>
 
+		<button type="text"></button>
 		<!-- main -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 		<script src="src/api/products.js"></script>
 		<script src="src/api/root.js"></script>
 
 		<!-- products -->
 		<script src="src/component/product.js"></script>
 		<link rel="stylesheet" href="src/component/product.css" />
+
+		<!-- modal -->
+		<script src="src/assets/js/modal.js"></script>
 	</body>
 </html>
