--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
 		<link rel="stylesheet" href="https://www.pulscen.ru/system/ckeditor_assets/attachments/226405/popap.css" />
-		<link rel="stylesheet" href="src/assets/css/index.css" />
+		<link rel="stylesheet" href="assets/css/index.css" />
 	</head>
 
 	<body>
@@ -16,14 +16,14 @@
 
 		<button type="text"></button>
 		<!-- main -->
-		<script src="src/api/products.js"></script>
-		<script src="src/api/root.js"></script>
+		<script src="api/products.js"></script>
+		<script src="api/root.js"></script>
 
 		<!-- products -->
-		<script src="src/component/product.js"></script>
-		<link rel="stylesheet" href="src/component/product.css" />
+		<script src="component/product.js"></script>
+		<link rel="stylesheet" href="component/product.css" />
 
 		<!-- modal -->
-		<script src="src/assets/js/modal.js"></script>
+		<script src="assets/js/modal.js"></script>
 	</body>
 </html>
