--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
-    <main class="product-listing-wrapper">
-    </main>
+    <main class="product-listing-wrapper"></main>
 
     <script src="api/products.js"></script>
+    <script src="js/modules/orderPopup.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
+
