--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <main class="product-listing-wrapper"></main>
 
     <script src="api/products.js"></script>
-    <script src="js/modules/orderPopup.js"></script>
+    <script src="js/modules/Product.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
