create base html

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,78 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <title>Тестовое задание</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
-    <main class="product-listing-wrapper">
+    <header class="header">
+      <div class="header__container container">
+        <div class="btn card-button">Корзина</div>
+      </div>
+    </header>
+
+    <main class="product-listing container">
+      <div class="product">
+        <div class="product__left">
+          <img src="./assets/images/5.jpg" class="product__photo" alt="" />
+        </div>
+
+        <div class="product__body">
+          <div class="product__title">Диван - кровать Джульета loremru</div>
+          <div class="product__price">66 863 руб</div>
+        </div>
+        <div class="product__right">
+          <div class="btn btn__order">Заказать</div>
+          <div class="btn btn__to-card">В корзину</div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product__left">
+          <img src="./assets/images/5.jpg" class="product__photo" alt="" />
+        </div>
+
+        <div class="product__body">
+          <div class="product__title">Диван - кровать Джульета loremru</div>
+          <div class="product__price">66 863 руб</div>
+        </div>
+        <div class="product__right">
+          <div class="btn btn__order">Заказать</div>
+          <div class="btn btn__to-card">В корзину</div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product__left">
+          <img src="./assets/images/5.jpg" class="product__photo" alt="" />
+        </div>
+
+        <div class="product__body">
+          <div class="product__title">Диван - кровать Джульета loremru</div>
+          <div class="product__price">66 863 руб</div>
+        </div>
+        <div class="product__right">
+          <div class="btn btn__order">Заказать</div>
+          <div class="btn btn__to-card">В корзину</div>
+        </div>
+      </div>
+      <div class="product">
+        <div class="product__left">
+          <img src="./assets/images/5.jpg" class="product__photo" alt="" />
+        </div>
+
+        <div class="product__body">
+          <div class="product__title">Диван - кровать Джульета loremru</div>
+          <div class="product__price">66 863 руб</div>
+        </div>
+        <div class="product__right">
+          <div class="btn btn__order">Заказать</div>
+          <div class="btn btn__to-card">В корзину</div>
+        </div>
+      </div>
     </main>
 
     <script src="api/products.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
