index.html changed

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+<head>
     <meta charset="UTF-8">
-  </head>
+    <link href="listing.css" rel="stylesheet">
+    <title>seems like Магазин диванов</title>
+</head>
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
+<body>
+<main class="product-listing-wrapper">
+    <div class="product-listing">
+    </div>
+</main>
 
-    <script src="api/products.js"></script>
-  </body>
+<script src="api/products.js"></script>
+<script src="listing.js"></script>
+<script src="buttons.js"></script>
+<script src="popup-cart.js"></script>
+<script src="popup-order.js"></script>
+</body>
 </html>
