added new file styles.js

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link href="listing.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>seems like Магазин диванов</title>
 </head>
 
