--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,23 @@
   </head>
 
   <body>
+    <header class="product-header">
+      <img
+        class="product-header__cart_icon"
+        src="./assets/icons/shopping-cart.svg"
+        alt="cart-icon"
+        id="product-cart__icon"
+      >
+      <div class="count_products" id="count_products">0</div>
+      <div id="product-cart"div>
+    </header>
     <main class="product-listing-wrapper">
+      <div id="products-items"></div>
+      <div id="order-popup" class="order-popup"></div>
     </main>
 
     <script src="api/products.js"></script>
+    <script type="module" src="components/js/index.js"></script>
+    <link rel="stylesheet" href="components/css/index.css">
   </body>
 </html>
