--- a/src/index.html
+++ b/src/index.html
@@ -9,68 +9,18 @@
   <body>
     <header class="header">
       <div class="header__container container">
-        <div class="btn card-button">Корзина</div>
+        <div class="btn card-button" id="header__card-button">Корзина</div>
+        <div class="card" id="card">
+          <div class="card__title">Вы добавили в корзину:</div>
+          <div class="card__body" id="card__body">
+            
+          </div>
+          <a href="#" class="btn" id="toCardBtn">Перейти в корзину</a>
+        </div>
       </div>
     </header>
 
-    <main class="product-listing container">
-      <div class="product">
-        <div class="product__left">
-          <img src="./assets/images/5.jpg" class="product__photo" alt="" />
-        </div>
-
-        <div class="product__body">
-          <div class="product__title">Диван - кровать Джульета loremru</div>
-          <div class="product__price">66 863 руб</div>
-        </div>
-        <div class="product__right">
-          <div class="btn btn__order">Заказать</div>
-          <div class="btn btn__to-card">В корзину</div>
-        </div>
-      </div>
-      <div class="product">
-        <div class="product__left">
-          <img src="./assets/images/5.jpg" class="product__photo" alt="" />
-        </div>
-
-        <div class="product__body">
-          <div class="product__title">Диван - кровать Джульета loremru</div>
-          <div class="product__price">66 863 руб</div>
-        </div>
-        <div class="product__right">
-          <div class="btn btn__order">Заказать</div>
-          <div class="btn btn__to-card">В корзину</div>
-        </div>
-      </div>
-      <div class="product">
-        <div class="product__left">
-          <img src="./assets/images/5.jpg" class="product__photo" alt="" />
-        </div>
-
-        <div class="product__body">
-          <div class="product__title">Диван - кровать Джульета loremru</div>
-          <div class="product__price">66 863 руб</div>
-        </div>
-        <div class="product__right">
-          <div class="btn btn__order">Заказать</div>
-          <div class="btn btn__to-card">В корзину</div>
-        </div>
-      </div>
-      <div class="product">
-        <div class="product__left">
-          <img src="./assets/images/5.jpg" class="product__photo" alt="" />
-        </div>
-
-        <div class="product__body">
-          <div class="product__title">Диван - кровать Джульета loremru</div>
-          <div class="product__price">66 863 руб</div>
-        </div>
-        <div class="product__right">
-          <div class="btn btn__order">Заказать</div>
-          <div class="btn btn__to-card">В корзину</div>
-        </div>
-      </div>
-    </main>
+    <main class="product-listing container" id="productsList"></main>
 
     <script src="api/products.js"></script>
     <script src="scripts/index.js"></script>
