--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,14 @@
         <div class="btn card-button" id="header__card-button">Корзина</div>
         <div class="card" id="card">
           <div class="card__title">Вы добавили в корзину:</div>
-          <div class="card__body" id="card__body">
-            
-          </div>
+          <div class="card__body" id="card__body"></div>
           <a href="#" class="btn" id="toCardBtn">Перейти в корзину</a>
         </div>
       </div>
     </header>
 
     <main class="product-listing container" id="productsList"></main>
-
+    <div id="popup"></div>
     <script src="api/products.js"></script>
     <script src="scripts/index.js"></script>
   </body>
