--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 <main class="product-listing-wrapper">
     <div class="product-listing">
     </div>
+    <div class="popup-cart">
+    </div>
 </main>
 
 <script src="api/products.js"></script>
