--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,21 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Тестовое АБАКПресс</title>
   </head>
-
   <body>
+    <header class="page-header"></header>
     <main class="product-listing-wrapper">
+      <h1 class="visually-hidden">Тестовое задание</h1>
+      <section class="products">
+        <h2 class="visually-hidden">Список товаров</h2>
+      </section>
     </main>
-
-    <script src="api/products.js"></script>
+    <script src="api/products.js" defer></script>
+    <script src="js/util.js" defer></script>
+    <script src="js/popup-basket.js" defer></script>
+    <script src="js/popup-product-order.js" defer></script>
+    <script src="js/general-product-list.js" defer></script>
   </body>
 </html>
