Разбил файл стилей для удобства чтения

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/order-popup.css">
+    <link rel="stylesheet" href="css/basket-popup.css">
     <title>Тестовое АБАКПресс</title>
   </head>
   <body>
