Шрифты и ресет добавлены в css. Main.css подключен к странице

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Product Listing</title>
+  <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 
 <body>
