Стилизован список продуктов

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,17 @@
             <button type="button" class="btn btn-cart">В корзину</button>
           </div>
         </li>
+        <li class="product">
+          <img src="assets/images/1.jpg" alt="Выкатной детский диван Зайка производитель фабрика Blanes - Фото" class="product__img">
+          <div class="product__content">
+            <h2 class="product__title">Выкатной детский диван Зайка производитель фабрика Blanes</h2>
+            <span class="product__price">11740</span>
+          </div>
+          <div class="product__btn-group">
+            <button type="button" class="btn">Заказать</button>
+            <button type="button" class="btn btn-cart">В корзину</button>
+          </div>
+        </li>
       </ul>
     </section>
   </main>
