--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 
-<body>
+<body class="no-scroll">
   <main class="product-listing-wrapper">
     <section class="products">
       <ul class="products-list">
@@ -54,22 +54,22 @@
     <button type="button" class="btn btn-close">&times;</button>
   </div>
 
-  <div class="order-popup">
-    <h2 class="order-popup__title">
-      Выкатной детский диван Зайка производитель фабрика Blanes
-    </h2>
+  <div class="order-popup open">
     <form action="#" class="form order-popup__wrapper">
+      <h2 class="order-popup__title">
+        Выкатной детский диван Зайка производитель фабрика Blanes
+      </h2>
       <div class="order-popup__info">
         <img src="assets/images/1.jpg" alt="Выкатной детский диван Зайка производитель фабрика Blanes - Фото" class="order-popup__img">
         <span class="order-popup__price"></span>
       </div>
       <fieldset class="order-popup__comment">
         <label for="comment" class="label order-popup__label">Комментарий к заказу:</label>
-        <textarea name="comment" id="comment"></textarea>
+        <textarea name="comment" id="comment" class="textarea order-popup__textarea"></textarea>
       </fieldset>
-      <label for="phone" class="label order-popup__label">Ваш телефон:</label>
-      <input id="phone" name="phone" type="text" class="input order-popup__input">
-      <button type="submit" class="btn order-popup__btn">Отправить</button>
+      <label for="phone" class="label order-popup__phone-label">Ваш телефон:</label>
+      <input id="phone" name="phone" type="text" class="input order-popup__phone-input">
+      <button type="submit" class="btn order-popup__submit">Отправить</button>
     </form>
     <button type="button" class="btn btn-close order-popup__btn-close">&times;</button>
   </div>
