В html изменены классы input и textarea. В common добавлены стили для этих элементов

--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,10 @@
         <span class="order-popup__price"></span>
       </div>
       <fieldset class="order-popup__comment">
-        <label for="comment" class="label order-popup__label">Комментарий к заказу:</label>
-        <textarea name="comment" id="comment" class="textarea order-popup__textarea"></textarea>
+        <label for="comment" class="order-popup__comment-label">Комментарий к заказу:</label>
+        <textarea name="comment" id="comment" class="textarea order-popup__comment-textarea"></textarea>
       </fieldset>
-      <label for="phone" class="label order-popup__phone-label">Ваш телефон:</label>
+      <label for="phone" class="order-popup__phone-label">Ваш телефон:</label>
       <input id="phone" name="phone" type="text" class="input order-popup__phone-input">
       <button type="submit" class="btn order-popup__submit">Отправить</button>
     </form>
