Стили и разметка для попапа завершены

--- a/src/index.html
+++ b/src/index.html
@@ -54,21 +54,22 @@
     <button type="button" class="btn btn-close">&times;</button>
   </div>
 
-  <div class="order-popup open">
+  <div class="order-popup">
     <form action="#" class="form order-popup__wrapper">
       <h2 class="order-popup__title">
         Выкатной детский диван Зайка производитель фабрика Blanes
       </h2>
       <div class="order-popup__info">
         <img src="assets/images/1.jpg" alt="Выкатной детский диван Зайка производитель фабрика Blanes - Фото" class="order-popup__img">
-        <span class="order-popup__price"></span>
+        <span class="order-popup__price">858558</span>
       </div>
       <fieldset class="order-popup__comment">
-        <label for="comment" class="order-popup__comment-label">Комментарий к заказу:</label>
-        <textarea name="comment" id="comment" class="textarea order-popup__comment-textarea"></textarea>
+        <label for="comment" class="order-popup__comment-label">Комментарий<br>
+          к заказу:</label>
+        <textarea name="comment" id="comment" class="order-popup__comment-textarea"></textarea>
       </fieldset>
       <label for="phone" class="order-popup__phone-label">Ваш телефон:</label>
-      <input id="phone" name="phone" type="text" class="input order-popup__phone-input">
+      <input id="phone" name="phone" type="text" class="order-popup__phone-input">
       <button type="submit" class="btn order-popup__submit">Отправить</button>
     </form>
     <button type="button" class="btn btn-close order-popup__btn-close">&times;</button>
