Добавлены стили для корзины

--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,9 @@
         </h2>
         <span class="cart__product-price">11740</span>
       </div>
+      <button type="button" class="btn btn-close">&times;</button>
     </div>
-    <button type="button" class="btn">Перейти в корзину</button>
-    <button type="button" class="btn btn-close">&times;</button>
+    <button type="button" class="btn cart__btn">Перейти в корзину</button>
   </div>
 
   <div class="order-popup">
